compiler/tests/fail/stack_allocation/x86-64/merge_too_large_param.jazz
export fn f (reg ptr u64[1] r) -> reg ptr u64[1] {
  stack u64[2] a;
  a[0]=0;
  r[0:1] = a[0:1];
  return r;
}
